@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	1.147 (gritter) 9/4/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	1.148 (gritter) 9/4/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	1.147 (gritter) 9/4/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	1.148 (gritter) 9/4/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -37,10 +37,10 @@ troff.d/afm.c: * Sccsid @(#)afm.c	1.21 (gritter) 8/29/05
 troff.d/afm.h: * Sccsid @(#)afm.h	1.9 (gritter) 8/26/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.6 (gritter) 9/4/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
-troff.d/makedev.c: * Sccsid @(#)makedev.c	1.7 (gritter) 9/4/05
+troff.d/makedev.c: * Sccsid @(#)makedev.c	1.8 (gritter) 9/4/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.21 (gritter) 9/4/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.34 (gritter) 9/4/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.64 (gritter) 9/4/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.65 (gritter) 9/4/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.11 (gritter) 9/4/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.7 (gritter) 8/22/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
