@@ -14,9 +14,10 @@ are disabled.
 
 .de longname
 .ds longname
+.ft longname
 .nr longname
-	The names of macros, strings, and number registers can be longer
-	than two characters now with the "-x" option.
+	The names of macros, strings, number registers, and fonts can be
+	longer than two characters now with the "-x" option.
 
 .do request arguments
 	has the same effect as executing ".request arguments" with the
@@ -68,6 +69,7 @@ are disabled.
 	that the base fonts of a document are mounted as "1 R", "2 I".
 	The initial fonts on positions 9 (S1) and 10 (S) should not be
 	changed, as these contain special metrics for drawing commands.
+	  "yy" may also consist of more than two characters.
 	  If the optional "supplyname" argument is present, glyph data
 	is included in the generated PostScript file. If "supplyname"
 	is one of "pfb", "pfa", or "t42", the file "supplyname.pfb" (or
@@ -178,6 +180,9 @@ are disabled.
 
 \E
 	is similar to "\e", but is not interpreted in copy mode.
+
+\f[name]						troff only
+	selects font "name".
 
 \n(.s
 	prints a decimal fraction if the current point size is not an
